# decision-memory-v1

./: .cursorrules  .dockerignore  .editorconfig  .env.docker.example  .env.example  .env.local.example  .env.railway.local.example  .gitattributes  .gitignore  .guard_partial_hash_preflight.txt  003_add_procurement_extensions.py  ALEMBIC_FIX.md  AUDIT_CI_CONFORMITE.md  AUDIT_COUCHE_B_V2.1.md  AUDIT_REPORT.md  AUDIT_STRATEGIQUE_DMS_2026-02-12.md  CHANGELOG.md  CHANGELOG_CBA_ENGINE.md  CI_FIX_REPORT.md  CI_FIX_SUMMARY.md  CI_NOTES.md  CI_VERIFICATION_REPORT.md  CLAUDE.md  COMPLIANCE_CHECKLIST.md  CONSTITUTION.md  CORRECTIFS_APPLIQUES.md  CORRECTIONS_APPLIED.md  COUCHE_B_VALIDATION.md  CREER_DB.md  CREER_DB_DBEAVER.md  CTO_VALIDATION_RESPONSE.md  CURSOR_AGENT_INSTRUCTIONS.md  DEPLOYMENT.md  DIAGNOSTIC_CI_FIX.md  Dockerfile  Dockerfile.dms-db-worker  EXECUTE_F2_PROBES.ps1  EXECUTE_FULL_P32_MANDATE.ps1  EXECUTE_MIGRATION_101.ps1  EXECUTE_POSTCHECK_101.ps1  (+103 more)
.cursor/: mcp.json  settings.json
.github/: pull_request_template.md
.milestones/: M-ANALYSIS-SUMMARY.done  M-COMMITTEE-CORE.done  M-CRITERIA-TYPING.done  M-DOCS-CORE.done  M-EXTRACTION-CORRECTIONS.done  M-NORMALISATION-ENGINE.done  M-NORMALISATION-ITEMS.done  M-PARSING-MERCURIALE.done  M-PIPELINE-A-E2E.done  M-PIPELINE-A-PARTIAL.done  M-SCHEMA-CORE.done  M-SCORING-ENGINE.done  M-SCORING-TESTS-CRITIQUES.done  M-TESTS.done  README.md
.trunk/: trunk.yaml
alembic/: env.py
backend/: main.py
config/: framework_signals.yaml  framework_thresholds.yaml  llm_arbitration.yaml  procurement_family_signals.yaml  (+1 more)
src/: auth.py  (+7 more)
(+1942 files in other folders)
